<resources>
  <string name="app_name">Language Translator</string>
  <string name="translation_label">Translation:</string>
  <string name="translate">translate</string>
  <string name="input_hint">Please enter text</string>
  <string name="target_language">Please select language</string>
  <string name="spanish">Spanish</string>
  <string name="french">French</string>
  <string name="italian">Italian</string>
  <string name="microphone">Microphone</string>
  <string name="play">Play</string>
  <string name="english">English</string>
</resources>
