<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="in.examenigma.babyread.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_language"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/target_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish"
            android:checked="true" />

        <RadioButton
            android:id="@+id/french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french" />

        <RadioButton
            android:id="@+id/italian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/italian" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_hint" />



    </LinearLayout>

    <Button
        android:id="@+id/translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:enabled="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="118dp"
            android:src="@drawable/ic_play"
            android:contentDescription="@string/play"
            android:layout_weight="0.26" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/translation_label"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/translated_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




</LinearLayout>
